CSS alignment issues

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -69,6 +69,7 @@ a {
     border-style:groove;
     border-width: 10px;
     border-color: var(--main-head);
+    width:100%;
 
 }
 
@@ -84,37 +85,51 @@ a {
     width: 60px;
   }
 
-  .work{
+  .contact-links li{
+    list-style: none;
+    margin: 5px;
+  }
+
+  .contact-links ul{
+    display:flex;
+    justify-content: center;
+    
+
+  }
+
+.work{
     text-align: center;
   }
 
+.project-list{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+
+}
 
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    width: 45%;
+    margin:5px;
     padding: 10px;
     border-style: dashed;
     border-width: 5px;
     border-color: var(--main-head);
-    justify-content: flex-start;
   }
   
   .projects header {
     text-align: center;
     padding: 20px;
-    width: 50%;
     background:var(--work-head);
     color: var(--font-color);
 
   }
   
   .projects img {
+    display:inline-flex
     margin-top: 2%;
     height: 60%;
-    width: 50%;
-    max-width: 400px;
+    width: 100%;
 
   }
 
